fix overflow-y and fix refresh button in each subreddit

--- a/19-reddit-client-anotherWay/styles.css
+++ b/19-reddit-client-anotherWay/styles.css
@@ -139,7 +139,7 @@ main {
 .subreddit-posts {
   min-height: 30rem;
   max-height: 45rem;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin-block: 2rem;
 }
 .subreddit-posts-opacity {
